<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="center_horizontal"
    tools:context=".CustomerScreen">

    <TextView
        android:id="@+id/customerInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/customer_instructions"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name_hint"
        android:inputType="text"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="190dp"
        app:layout_constraintTop_toBottomOf="@id/customerInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name_hint"
        android:inputType="text"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="255dp"
        app:layout_constraintTop_toBottomOf="@id/firstName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="323dp"
        app:layout_constraintTop_toBottomOf="@id/lastName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/id_hint"
        android:inputType="number"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="137dp"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/add"
        android:layout_width="160dp"
        android:layout_height="65dp"
        android:clickable="true"
        android:onClick="addCustomer"
        android:text="@string/add_customer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/id" />

    <Button
        android:id="@+id/get"
        android:layout_width="160dp"
        android:layout_height="65dp"
        android:clickable="true"
        android:onClick="getCustomer"
        android:text="@string/get_customer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add" />

    <Button
        android:id="@+id/update"
        android:layout_width="160dp"
        android:layout_height="65dp"
        android:clickable="true"
        android:onClick="updateCustomer"
        android:text="@string/update_customer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/get" />

    <Button
        android:id="@+id/delete"
        android:layout_width="160dp"
        android:layout_height="65dp"
        android:clickable="true"
        android:onClick="deleteCustomer"
        android:text="@string/delete_customer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/update" />

</androidx.constraintlayout.widget.ConstraintLayout>