<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="center_horizontal"
    tools:context=".InventoryScreen">

    <TextView
        android:id="@+id/inventoryInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inventory_instructions"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/itemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/inv_name_hint"
        android:inputType="text"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="190dp"
        app:layout_constraintTop_toBottomOf="@id/inventoryInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/itemDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/inv_desc_hint"
        android:inputType="text"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="255dp"
        app:layout_constraintTop_toBottomOf="@id/itemName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/inv_price_hint"
        android:inputType="text"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="323dp"
        app:layout_constraintTop_toBottomOf="@id/itemDesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/itemId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/inv_id_hint"
        android:inputType="text"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="137dp"
        app:layout_constraintTop_toBottomOf="@id/price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/add"
        android:layout_width="160dp"
        android:layout_height="65dp"
        android:clickable="true"
        android:onClick="addInventory"
        android:text="@string/add_inventory_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/itemId" />

    <Button
        android:id="@+id/get"
        android:layout_width="160dp"
        android:layout_height="65dp"
        android:clickable="true"
        android:onClick="getInventory"
        android:text="@string/get_inventory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add" />

    <Button
        android:id="@+id/update"
        android:layout_width="160dp"
        android:layout_height="65dp"
        android:clickable="true"
        android:onClick="updateInventory"
        android:text="@string/update_inventory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/get" />

    <Button
        android:id="@+id/delete"
        android:layout_width="160dp"
        android:layout_height="65dp"
        android:clickable="true"
        android:onClick="deleteInventory"
        android:text="@string/delete_inventory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/update" />

</androidx.constraintlayout.widget.ConstraintLayout>