<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="center_horizontal"
    tools:context=".WelcomeScreen">

    <TextView
        android:id="@+id/textView"
        android:layout_width="286dp"
        android:layout_height="57dp"
        android:autoSizeMinTextSize="30dp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="343dp"
        android:layout_height="79dp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="@string/intro_text"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/addInventoryButton"
        android:layout_width="160dp"
        android:layout_height="65dp"
        android:clickable="true"
        android:onClick="inventoryMgmt"
        android:text="@string/add_inventory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="210dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/customerButton"
        android:layout_width="155dp"
        android:layout_height="65dp"
        android:clickable="true"
        android:onClick="customerMgmt"
        android:text="@string/customer_mgmt"
        app:layout_constraintTop_toBottomOf="@+id/addInventoryButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/displayInvoiceButton"
        android:layout_width="155dp"
        android:layout_height="75dp"
        android:clickable="true"
        android:onClick="displayInvoice"
        android:text="@string/display_invoice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="275dp"
        app:layout_constraintTop_toBottomOf="@+id/customerButton"/>

    <Button
        android:id="@+id/sendInvoiceButton"
        android:layout_width="155dp"
        android:layout_height="65dp"
        android:clickable="true"
        android:onClick="sendInvoice"
        android:text="@string/send_invoice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="275dp"
        app:layout_constraintTop_toBottomOf="@+id/displayInvoiceButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>